[gd_scene load_steps=9 format=3 uid="uid://r8qw0kvg2p2f"]

[ext_resource type="Script" uid="uid://ci51a3l6h2l00" path="res://scenes+scripts/enemies/attacks/king_blast.gd" id="1_gg6of"]
[ext_resource type="Script" uid="uid://bnaedlng2pm5g" path="res://components/sight_component.gd" id="2_xr4vo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nhf2h"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qt11g"]
radius = 8.00001

[sub_resource type="CircleShape2D" id="CircleShape2D_xs12y"]
radius = 5.0

[sub_resource type="Curve" id="Curve_qt11g"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.170455, 1), 0.0, 0.0, 0, 0, Vector2(0.568182, 0.820225), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_qt11g"]
colors = PackedColorArray(0.481572, 0.273148, 0.597656, 1, 0.81189, 0.476563, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_ut5jr"]
radius = 500.0

[node name="blast" type="CharacterBody2D" node_paths=PackedStringArray("character", "sight", "follow", "point")]
collision_layer = 8
collision_mask = 8
motion_mode = 1
script = ExtResource("1_gg6of")
speed = 1200.0
drag = 1200.0
maxSpeed = 600.0
damage = 1.0
character = NodePath("triangle")
sight = NodePath("SightComponent")
follow = NodePath("follow")
point = NodePath("follow/point")
rotationSpeed = 350.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
shape = SubResource("CircleShape2D_nhf2h")

[node name="triangle" type="Polygon2D" parent="."]
position = Vector2(0, 5.96046e-08)
rotation = 1.5708
scale = Vector2(3.5, 3.5)
color = Color(0.84106, 0.00331116, 0.847656, 1)
polygon = PackedVector2Array(0, -2.5, 1, 0, -1, 0)

[node name="triangle" type="Polygon2D" parent="triangle"]
show_behind_parent = true
position = Vector2(0, 0.35)
scale = Vector2(1.4, 1.4)
polygon = PackedVector2Array(0, -2.5, 1, 0, -1, 0)

[node name="Area2D" type="Area2D" parent="triangle"]
position = Vector2(-1.70299e-08, 6.1648e-14)
rotation = -1.5708
scale = Vector2(0.285714, 0.285714)
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="triangle/Area2D"]
position = Vector2(3, 0)
shape = SubResource("CircleShape2D_qt11g")

[node name="blastRadius" type="Area2D" parent="triangle"]
position = Vector2(-3.11988e-06, -0.857143)
rotation = -1.5708
scale = Vector2(0.42, 0.42)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="triangle/blastRadius"]
shape = SubResource("CircleShape2D_xs12y")
disabled = true
debug_color = Color(1, 0, 0, 0)

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 60
lifetime = 0.35
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
local_coords = true
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 200.0
orbit_velocity_min = 0.25
orbit_velocity_max = 0.35
radial_accel_max = 45.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 1.5
scale_amount_max = 3.5
scale_amount_curve = SubResource("Curve_qt11g")
color_initial_ramp = SubResource("Gradient_qt11g")

[node name="SightComponent" type="Area2D" parent="."]
script = ExtResource("2_xr4vo")
targetGroup = "player"
metadata/_custom_type_script = "uid://bnaedlng2pm5g"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightComponent"]
position = Vector2(3, 0)
shape = SubResource("CircleShape2D_ut5jr")
debug_color = Color(1, 0, 0, 0)

[node name="follow" type="Node2D" parent="."]
rotation = 3.14159

[node name="point" type="Marker2D" parent="follow"]

[connection signal="body_entered" from="triangle/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="triangle/blastRadius" to="." method="_on_blast_radius_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
